feat: 🎸 add backend file processor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,32 @@
 {
   "compilerOptions": {
-    // Enable latest features
     "lib": ["ESNext", "DOM"],
     "target": "ESNext",
     "module": "ESNext",
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
-
-    // Bundler mode
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "noEmit": true,
-
-    // Best practices
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
-
-    // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
+    "noPropertyAccessFromIndexSignature": false,
+    "paths": {
+      "@controllers/*": ["./src/presentation/api/*"],
+      "@utils/*": ["./src/utils/*"],
+      "@use-cases/*": ["./src/use-cases/*"],
+      "@entities/*": ["./src/domain/entities/*"],
+      "@domain-repositories/*": ["./src/domain/repositories/*"],
+      "@infra-repositories/*": ["./src/infra/repositories/*"],
+      "@dtos/*": ["./src/domain/dtos/*"],
+      "@mappers/*": ["./src/mappers/*"],
+      "@factories/*": ["./src/factories/*"],
+      "@repositories/*": ["./src/repositories/*"]
+    }
   }
 }
