--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
   "name": "file-processor",
-  "module": "index.ts",
+  "module": "src/server.ts",
   "type": "module",
+  "scripts": {
+    "dev": "bun run --hot src/server.ts",
+    "start": "bun run src/server.ts",
+    "test": "bun test",
+    "test:watch": "bun test --watch"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "express": "5.0.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
